<resources>
    <string name="app_name">Flashly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Blank fragment</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cofirm_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up_here">   Sign Up here</string>
    <string name="welcome">Welcome</string>
    <string name="have_already_account">Have already account?</string>
    <string name="your_full_name">Your Full Name</string>
</resources>